--- a/CurrículoComum.html
+++ b/CurrículoComum.html
@@ -76,40 +76,47 @@
 <div class="container">
 <div class="element">
 <p><a href="https://www.estantevirtual.com.br/livraria-de-sueos/servico-nacional-de-aprendizagem-industrial-ciencias-aplicadas-vol-ii-quimica-e-fisica-4068637314?gclid=Cj0KCQjw_5unBhCMARIsACZyzS3q03rLqUc6cVooyaqGQqmeKxUpVJkx0tNbpT2LZkA-x1JNgWW2hj4aAhpqEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Ciências Aplicadas - Vol. II</a></p>
-<img src ="img/Ciências Aplicadas - Vol. II.jpg" alt="">
+<img src ="img/Ciências Aplicadas - Vol. II.jpg" alt="">      
+      <a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 
 <div class="element">
 <p><a href="https://www.estantevirtual.com.br/livros/john-heskett/desenho-industrial/2393968102?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Desenho Industrial</a></p>
-<img src ="img/desenho industrial.jpg" alt="">
+<img src ="img/desenho industrial.jpg" alt="">      
+      <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 <p><a href="https://www.estantevirtual.com.br/livros/thomas-e-french/desenho-tecnico/3251511378?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Desenho técnico</a></p>
-<img src ="img/Desenho técnico.jpg" alt="">
+<img src ="img/Desenho técnico.jpg" alt="">    
+        <a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 <div class="element">
 
 <p><a href="https://www.estantevirtual.com.br/livros/manoel-paiva/matematica-paiva-vol-1/38190020?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Matemática Paiva - Vol. 1</a></p>
-<img src ="img/Matemática vol I.jpg" alt="">
+<img src ="img/Matemática vol I.jpg" alt="">      
+      <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.estantevirtual.com.br/livros/manoel-paiva/matematica-paiva-vol-2/2605705854?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Matemática Paiva - Vol. 2</a></p>
-<img src ="img/Matemática Paiva - Vol. 2.jpg" alt="">
+<img src ="img/Matemática Paiva - Vol. 2.jpg" alt="">         
+   <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.estantevirtual.com.br/livros/paranhos-lidia-rodolpho-paulo/metodologia-da-pesquisa-aplicada-a-tecnologia/3272013691?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> METODOLOGIA DA PESQUISA APLICADA A TECNOLOGIA</a></p>
-<img src ="img/Metodologia da pesquisa aplicada à tecnologia.jpg" alt="">
+<img src ="img/Metodologia da pesquisa aplicada à tecnologia.jpg" alt="">          
+  <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.estantevirtual.com.br/livrosprezentini/jose-wagner-bungart-metodologia-de-projetos-conceitos-planejamento-e-desenvolvimento-3721791596?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Metodologia de projetos: Conceitos, planejamento e desenvolvimento</a></p>
-<img src ="img/Metodologia de projetos - Conceitos, planejamento e desenvolvimento.jpg" alt="">
+<img src ="img/Metodologia de projetos - Conceitos, planejamento e desenvolvimento.jpg" alt="">       
+     <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 </div>
