--- a/Gestao.html
+++ b/Gestao.html
@@ -74,45 +74,53 @@
 <div class="container">
 <div class="element">
 <p><a href="hhttps://www.estantevirtual.com.br/busca?q=Assistente%20Administrativo" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Assistente Administrativo</a></p>
-<img src ="img/Assistente Administrativo.jpg" alt="">
+<img src ="img/Assistente Administrativo.jpg" alt="">      
+      <a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 
 <div class="element">
 <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/assistente-de-contabilidade-colecao-gestao/3527463798?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Assistente de contabilidade</a></p>
-<img src ="img/Assistente de contabilidade.jpg" alt="">
+<img src ="img/Assistente de contabilidade.jpg" alt="">    
+        <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
     
 <p><a href="https://www.amazon.com.br/Comunica%C3%A7%C3%A3o-Empresarial-Carolina-Tomasi/dp/8597019174" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Comunicação empresarial</a></p>
-<img src ="img/Comunicação empresarial.jpg" alt="">
+<img src ="img/Comunicação empresarial.jpg" alt="">   
+         <a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 <div class="element">
 
 <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/controle-de-perdas-e-refugos-colecao-gestao/2495137891?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Controle de perdas e refugos</a></p>
-<img src ="img/Controle de perdas e refugos.jpg" alt="">
+<img src ="img/Controle de perdas e refugos.jpg" alt="">     
+       <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Ferramentas-Qualidade-Cole%C3%A7%C3%A3o-Roberto-Possarle/dp/8583930120/ref=asc_df_8583930120/?tag=googleshopp00-20&linkCode=df0&hvadid=379793917328&hvpos=&hvnetw=g&hvrand=6905175592889425044&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001765&hvtargid=pla-423316250151&psc=1" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Ferramentas da Qualidade</a></p>
-<img src ="img/Ferramentas da Qualidade.jpg" alt="">
+<img src ="img/Ferramentas da Qualidade.jpg" alt="">    
+        <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Lideran%C3%A7a-Informa%C3%A7%C3%B5es-Tecnol%C3%B3gicas-Gest%C3%A3o-ebook/dp/B01MZ80BNM" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Liderança</a></p>
-<img src ="img/Liderança.jpg" alt="">
+<img src ="img/Liderança.jpg" alt="">         
+   <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Motiva%C3%A7%C3%A3o-desempenho-pessoal-Valmir-Borine/dp/8583938830" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Motivação e desempenho pessoal</a></p>
-<img src ="img/Motivação e desempenho pessoal.jpg" alt="">
+<img src ="img/Motivação e desempenho pessoal.jpg" alt="">  
+          <a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 <div class="element">
 <p><a href="https://www.amazon.com.br/Planejamento-dos-Recursos-Instala%C3%A7%C3%B5es-Industriais/dp/8583930945"class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">O Planejamento dos Recursos e das Instalações Industriais</a></p>
-<img src ="img/O planejamento dos recursos e das instalações industriais.jpg" alt="">
+<img src ="img/O planejamento dos recursos e das instalações industriais.jpg" alt="">      
+      <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 </div>
