--- a/MeioAmbiente.html
+++ b/MeioAmbiente.html
@@ -79,35 +79,41 @@
 
 <div class="element">
 <p><a href="https://www.amazon.com.br/Manual-An%C3%A1lise-Res%C3%ADduos-S%C3%B3lidos-Residu%C3%A1rias/dp/8572695257" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Análise de Resíduos Sólidos</a></p>
-<img src ="img/solidos.jpg" alt="">
+<img src ="img/solidos.jpg" alt="">          
+  <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 <p><a href="https://www.amazon.com.br/Gest%C3%A3o-ambiental-degradadas-Gustavo-Henrique/dp/8528610950/ref=asc_df_8528610950/?tag=googleshopp00-20&linkCode=df0&hvadid=379685921712&hvpos=&hvnetw=g&hvrand=2392302129799230858&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001765&hvtargid=pla-421340558856&psc=1" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Áreas Degradadas</a></p>
 <img src ="img/desgradadas.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Educa%C3%A7%C3%A3o-Ambiental-Princ%C3%ADpios-Pr%C3%A1ticas-Genebaldo/dp/8585351098" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Educação Ambiental</a></p>
 <img src ="img/ed.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/F%C3%ADsica-Ambiental-Orlando-Zu%C3%B1iga-Guillermo/dp/9587658450" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Física Ambiental</a></p>
 <img src ="img/fisicaa.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Gest%C3%A3o-pessoas-Ant%C3%B4nio-Lima-Ribeiro/dp/8553131785/ref=asc_df_8553131785/?tag=googleshopp00-20&linkCode=df0&hvadid=379815268931&hvpos=&hvnetw=g&hvrand=17143721307739642406&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001765&hvtargid=pla-873002725644&psc=1" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Gestão de Pessoas</a></p>
 <img src ="img/pessoas.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.livrariart.com.br/legislacao-ambiental-comentada/p?idsku=21355&gclid=Cj0KCQjw_5unBhCMARIsACZyzS3bXrjWiAD3cKT0rLkBvX1EwB7UxIbLrLpDPxj2q1mC_DwAN26YSPcaAloOEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Legislação Ambiental </a></p>
 <img src ="img/legis.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 </div>
