--- a/Metalmecânica.html
+++ b/Metalmecânica.html
@@ -81,42 +81,56 @@
 <div class="container">
 <div class="element">
 <p><a href="hhttps://www.estantevirtual.com.br/busca?q=Assistente%20Administrativo" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Assistente Administrativo</a></p>
-<img src ="img/Assistente Administrativo.jpg" alt="">
+<img src ="img/Assistente Administrativo.jpg" alt="">    
+   <a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 
 <div class="element">
 <p><a href="https://www.estantevirtual.com.br/livros/senai/tolerancia-geometrica/527959703?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjw_5unBhCMARIsACZyzS1I7RlPtCQV5JXhBIYeogBqaVZW6oVTUjmCsGLeDKr9c_449_BiwmQaArKAEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Tolerância Geométrica</a></p>
-<img src ="img/Tolerância geométrica.jpg" alt="">
+<img src ="img/Tolerância geométrica.jpg" alt="">   
+   <a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
     
 <p><a href="https://www.amazon.com.br/Desenho-Aplicado-ao-Projeto-Mecanismos/dp/8583931445" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Desenho aplicado ao projeto de mecanismos</a></p>
-<img src ="img/Desenho aplicado ao projeto de mecanismos.jpg" alt="">
+<img src ="img/Desenho aplicado ao projeto de mecanismos.jpg" alt="">       
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Fen%C3%B4menos-Transporte-Aplica%C3%A7%C3%B5es-Industriais-Ambiente/dp/8583931410" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Fenômenos de Transporte: Aplicações Industriais</a></p>
-<img src ="img/Fenômenos de transporte - Aplicações industriais.jpg" alt="">
+<img src ="img/Fenômenos de transporte - Aplicações industriais.jpg" alt="">    
+   <a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Resist%C3%AAncia-dos-Materiais-Elementos-M%C3%A1quinas/dp/858393116X"class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"></a>Resistência dos materiais e elementos de máquinas</a></p>
-<img src ="img/Resistência dos Materiais e Elementos de Máquinas.jpg" alt="">
+<img src ="img/Resistência dos Materiais e Elementos de Máquinas.jpg" alt="">   
+    <a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Tecnologia-Mec%C3%A2nica-Aplicada-An%C3%A1lise-Esfor%C3%A7os/dp/8583931291" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tecnologia Mecânica Aplicada à Análise de Esforços</a></p>
-<img src ="img/Tecnologia Mecânica Aplicada à Análise de Esforços.jpg" alt="">
+<img src ="img/Tecnologia Mecânica Aplicada à Análise de Esforços.jpg" alt="">    
+   <a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Administra%C3%A7%C3%A3o-Manuten%C3%A7%C3%A3o-Industrial-T%C3%A9cnicas-Aplicadas/dp/8583939632" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Administração da manutenção industrial - Técnicas aplicadas</a></p>
-<img src ="img/Administração da manutenção industrial - Técnicas aplicadas.jpg"">
+<img src ="img/Administração da manutenção industrial - Técnicas aplicadas.jpg">     
+  <a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 
