--- a/alimentos.html
+++ b/alimentos.html
@@ -79,30 +79,37 @@
         <div class="element">
             <p><a href="https://www.magazineluiza.com.br/livro-boas-praticas-de-fabricacao-para-manipulacao-de-alimentos/p/223581600/li/adml/?seller_id=espacoshop&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=68055&gclid=Cj0KCQjwrfymBhCTARIsADXTabkWWUbquGNTsYGm1X9SArEyVz8QWPrdGRTa0i_KIQC_fCDZ9NT9o4saAiTCEALw_wcB&gclsrc=aw.ds" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Boas práticas de fabricação para manipulação de alimentos</a></p>
             <img src="img/Boas práticas de fabricação para manipulação de alimentos.jpg" alt="">
+            <a class="btn btn-primary" href="#" role="button">Comprar</a>
         </div>
         <div class="element">
             <p><a href="https://www.estantevirtual.com.br/oficinadosaber/senai-sp-fundamentos-de-panificacao-e-confeitaria-3893225820?gclid=Cj0KCQjwrfymBhCTARIsADXTabkWXQ-PoMqYmQz7MbRBR_HanI9D1NOPxVPWeqS_XNWfhKeI0DGVbcMaAjCjEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Fundamentos de panificação e confeitaria</a></p>
             <img src="img/Fundamentos de Panificação e Confeitaria.jpg" alt="">
+            <a class="btn btn-primary" href="#" role="button">Comprar</a>
         </div>
         <div class="element">
             <p><a href="https://www.magazineluiza.com.br/livro-manipulador-de-alimentos/p/223565700/li/adml/?seller_id=magazineluiza&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=68976&gclid=Cj0KCQjwrfymBhCTARIsADXTabmIiDBjapj25fqLIodVgk2VlLMZiGkautgHydQxYdk7HkB9V2-t5qAaAsWdEALw_wcB&gclsrc=aw.ds" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Manipulador de alimentos</a></p>
             <img src="img/Manipulador de alimentos.jpg" alt="">
+            <a class="btn btn-primary" href="#" role="button">Comprar</a>
         </div>
         <div class="element">
             <p><a href="https://www.estantevirtual.com.br/sirbook/alessandra-pagiato-loureiro-processo-de-fabricacao-de-pizzas-3710160652?gclid=Cj0KCQjwrfymBhCTARIsADXTabmvevEkfCMjRrpaAV3QNPvl8lY-srh49LNijh3x4JHKJmjoX0hli0oaAhaDEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Processo de fabricação de pizzas</a></p>
             <img src="img/Processo de Fabricação de Pizzas.jpg" alt="">
+            <a class="btn btn-primary" href="#" role="button">Comprar</a>
         </div>
         <div class="element">
             <p><a href="https://www.magazineluiza.com.br/livro-industrializacao-de-frutas-e-hortalicas/p/223646900/li/adml/?seller_id=magazineluiza&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=68976&gclid=Cj0KCQjwrfymBhCTARIsADXTabka_qcJMOrtWjF_pqN2R7QGVDlMsqYnxMq4iDdGTkGAl81U6tthEI4aAuztEALw_wcB&gclsrc=aw.ds" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Industrialização de frutas e hortaliças</a></p>
             <img src="img/Industrialização de Leites Capa comum.jpg" alt="">
+            <a class="btn btn-primary" href="#" role="button">Comprar</a>
         </div>
         <div class="element">
             <p><a href="https://www.estantevirtual.com.br/livrariadoadvogado/maria-cecilia-cury-chaddad-rotulagem-de-alimentos-3880530999?gclid=Cj0KCQjwrfymBhCTARIsADXTabl6wFMuKUAcO-C0DisKTgQcYzqS2g8p17P8KK_Gx5oy_sjV-LDSZGsaAkBFEALw_wcB"class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Rotulagem de alimentos</a></p>
-            <img src="img/Rotulagem de Alimentos.jpg"alt="">
+            <img src="img/Rotulagem de Alimentos.jpg"alt="">            
+            <a class="btn btn-primary" href="#" role="button">Comprar</a>
         </div>
             <div class="element">
             <p><a href="https://www.amazon.com.br/Industrializa%C3%A7%C3%A3o-Leites-V%C3%A1rios-Autores/dp/8583935629" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Industrialização de leites</a></p>
             <img src="img/Industrialização de Leites Capa comum.jpg" alt="">
+            <a class="btn btn-primary" href="#" role="button">Comprar</a>
         </div>
     </div>
         <footer class="bg-dark text-light">
