--- a/eletronica.html
+++ b/eletronica.html
@@ -74,40 +74,47 @@
 <div class="container">
 <div class="element">
 <p><a href="https://www.americanas.com.br/categoria/mercado?chave=dk_hm_tp_1_0_ge" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Livro - Análise de Circuito</a></p>
-<img src ="img/analise.jpg" alt="">
+<img src ="img/analise.jpg" alt="">     
+       <a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 
 <div class="element">
 <p><a href="https://www.estantevirtual.com.br/livros/belvedere-paulo/arduino-uno-fundamentos-e-aplicacoes/10564328?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjw_5unBhCMARIsACZyzS3NGy8dvUcfe_Fvi8rYecjHvK-ui-3aZgqBuZMpkj82c93YHYUxY7UaAoYbEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Arduino UNO - Fundamentos e aplicações</a></p>
-<img src ="img/autoo.jpg" alt="">
+<img src ="img/autoo.jpg" alt="">       
+     <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 <p><a href="https://a.co/d/4MCr8wy" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Cabine primária - Operação e manutenção de subestações</a></p>
-<img src ="img/consumidor.jpg" alt="">
+<img src ="img/consumidor.jpg" alt="">     
+       <a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Comandos-Eletroeletr%C3%B4nicos-Teoria-V%C3%A1rios-Autores/dp/8583931844" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Comandos eletroeletrônicos - Teoria - Vol. 1</a></p>
-<img src ="img/comandos.jpg" alt="">
+<img src ="img/comandos.jpg" alt="">       
+     <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/comandos-eletroeletronicos-teoria/4120619671?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjw_5unBhCMARIsACZyzS2nftZXr47HM9JDngrRye6HZg5yPT-Cu6dxjj4PaH57QnTkC35iarUaAsLcEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Comandos eletroeletrônicos - Prática</a></p>
-<img src ="img/teoria.jpg" alt="">
+<img src ="img/teoria.jpg" alt="">       
+     <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Conversores-inversores-Marcos-Antonio-Felizola/dp/8583939349" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Conversores e Inversores - Fundamentos e aplicações</a></p>
-<img src ="img/invensores.jpg" alt="">
+<img src ="img/invensores.jpg" alt="">       
+     <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.senaispeditora.com.br/produto/desenho-de-circuitos-eletronicos/" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Desenho de circuitos eletrônicos</a></p>
-<img src ="img/Desenho_de_circuitos_eletronicos.jpg" alt="">
+<img src ="img/Desenho_de_circuitos_eletronicos.jpg" alt="">     
+       <a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 </div>
