--- a/index.html
+++ b/index.html
@@ -82,14 +82,17 @@
             <div class="element">
                 <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/alimentos-para-animais/2999724477?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjwrfymBhCTARIsADXTabkdJ_BaOizTL7Q1MI9kbm6GyBrbVFpmxM-sHcPty70eiGe6VblYsF8aAsqmEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Alimentos para animais </a></p>
                 <img src="img/Alimentos para animais.jpg" alt="" class="livros">
+                <a class="btn btn-primary" href="#" role="button">Comprar</a>
             </div>
             <div class="element">
                 <p><a href="https://www.magazineluiza.com.br/livro-boas-praticas-de-fabricacao-para-manipulacao-de-alimentos/p/223581600/li/adml/?seller_id=espacoshop&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=68055&gclid=Cj0KCQjwrfymBhCTARIsADXTabkWWUbquGNTsYGm1X9SArEyVz8QWPrdGRTa0i_KIQC_fCDZ9NT9o4saAiTCEALw_wcB&gclsrc=aw.ds" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Boas práticas de fabricação para manipulação de alimentos</a></p>
                 <img src="img/Boas práticas de fabricação para manipulação de alimentos.jpg" alt="" class="livros">
+                <a class="btn btn-primary" href="#" role="button">Comprar</a>
             </div>
             <div class="element">
                 <p><a href="https://www.estantevirtual.com.br/oficinadosaber/senai-sp-fundamentos-de-panificacao-e-confeitaria-3893225820?gclid=Cj0KCQjwrfymBhCTARIsADXTabkWXQ-PoMqYmQz7MbRBR_HanI9D1NOPxVPWeqS_XNWfhKeI0DGVbcMaAjCjEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Fundamentos de panificação e confeitaria</a></p>
                 <img src="img/Fundamentos de Panificação e Confeitaria.jpg" alt="" class="livros">
+                <a class="btn btn-primary" href="#" role="button">Comprar</a>
             </div>
         </div>
         <style>
