--- a/ti.html
+++ b/ti.html
@@ -75,51 +75,60 @@
 <div class="element">
 <p><a href="https://www.martinsfontespaulista.com.br/administracao-de-dispositivos-de-redes-906763/p" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">ADMINISTRAÇÃO DE DISPOSITIVOS DE REDES</a></p>
 <img src ="img/adminstracao de dispositivos de redes.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 
 <div class="element">
 <p><a href="https://www.amazon.com.br/Adobe-Illustrator-Cria%C3%A7%C3%A3o-Projetos-Pr%C3%A1tica/dp/8583939802" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Adobe Illustrator Cc. Criação de Projetos na Prática</a></p>
 <img src ="img/Adobe Illustrator Cc. Criação de Projetos na Prática.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 <p><a href="https://www.amazon.com.br/Adobe-Photoshop-Tratamento-Imagens-Digitais/dp/8583939985" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Adobe Photoshop Cc. Tratamento de Imagens Digitais</a></p>
 <img src ="img/Adobe Photoshop Cc. Tratamento de Imagens Digitais.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Aprenda-Java-Aplica%C3%A7%C3%B5es-Spring-Hibernate/dp/8553400360" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Aprenda Java Ee 8. Aplicações Para Web com Spring Mvc e Hibernate </a></p>
 <img src ="img/Aprenda Java Ee 8. Aplicações Para Web com Spring Mvc e Hibernate.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.fr/CorelDRAW-Pr%C3%A1tico-Thiago-Cesar-Teixeira/dp/8583939578" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> CorelDRAW X8 - Guia prático</a></p>
 <img src ="img/CorelDRAW X8. Guia Prático.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Dashboard-Microsoft-Office-Tecnologia-Informa%C3%A7%C3%A3o-ebook/dp/B07B31LXNJ" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Dashboard no Microsoft Office Excel 2016</a></p>
 <img src ="img/Dashboard no Microsoft.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Gerenciamento-seguran%C3%A7a-redes-Tecnologia-Informa%C3%A7%C3%A3o-ebook/dp/B075KN2CNC" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Gerenciamento e segurança de redes</a></p>
 <img src ="img/Gerenciamento e segurança de redes.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 </p><a href="https://www.amazon.com.br/Inform%C3%A1tica-Fundamentos-Terminologia-Almeida-Ramos/dp/8583931372" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Informática - Fundamentos e terminologia </a></p>
 <img src ="img/Informática - Fundamentos e terminologia - MS windows 10, MS Office Word, Excel e Power Point 2016 e internet.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 </p><a href="https://www.amazon.com.br/Microsoft-office-excel-2013-b%C3%A1sico/dp/8583935513" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Microsoft Office Excel 2013 Básico </a></p>
 <img src ="img/Microsoft Office Excel 2013 Básico.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 </div>
