--- a/segurançatrabalho.html
+++ b/segurançatrabalho.html
@@ -75,51 +75,68 @@
 <div class="element">
 <p><a href="https://www.amazon.com.br/CIPA-Comiss%C3%A3o-Interna-Preven%C3%A7%C3%A3o-Acidentes/dp/8583937559" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">CIPA - Comissão Interna de Prevenção de Acidentes</a></p>
 <img src ="img/CIPA - Comissão Interna de Prevenção de Acidentes.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 </div>
 
 <div class="element">
 <p><a href="https://www.amazon.com.br/Nr-11-Opera%C3%A7%C3%A3o-Transpaleteira-El%C3%A9trica/dp/8553401391" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">NR 11 - Operação de Transpaleteira Elétrica</a></p>
 <img src ="img/NR 11 - Operação de Transpaleteira Elétrica.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 <p><a href="https://www.amazon.com.br/Adobe-Photoshop-Tratamento-Imagens-Digitais/dp/8583939985" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">NR 10 - Segurança em Instalações e Eletricidade</a></p>
 <img src ="img/NR 10 - Segurança em Instalações e Serviços em Eletricidade.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Inflam%C3%A1veis-Combust%C3%ADveis-Andreia-Cristiane-Rocha/dp/8553400921" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> NR 20 - Inflamáveis e Combustíveis </a></p>
 <img src ="img/NR 20 - Inflamáveis e Combustíveis.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Preven%C3%A7%C3%A3o-inc%C3%AAndios-Informa%C3%A7%C3%B5es-Tecnol%C3%B3gicas-Seguran%C3%A7a-ebook/dp/B01N75T80L" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Prevenção de incêndios</a></p>
 <img src ="img/Prevenção de incêndios.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/NR-33-Seguran%C3%A7a-Espa%C3%A7o-Confinado-Trabalhadores/dp/8583931143" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">NR 33 - Segurança e Saúde em Espaço Confinad</a></p>
 <img src ="img/NR 33 - Segurança e Saúde em Espaço Confinado.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 
 <p><a href="https://www.amazon.com.br/Primeiros-Socorros-V%C3%A1rios-Autores/dp/8583938318" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Primeiros socorros - 2ª edição</a></p>
 <img src ="img/Primeiros Socorros.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 
 </p><a href="https://www.amazon.com.br/NR-35-Seguran%C3%A7a-Atividades-Trabalho-Altura/dp/8583935173" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> NR 35 - Segurança nas Atividades com Trabalho em Altura  </a></p>
 <img src ="img/NR 35 - Segurança nas Atividades com Trabalho em Altura .jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 <div class="element">
 
 </p><a href="https://www.amazon.com.br/Nr-13-Treinamento-Seguran%C3%A7a-Opera%C3%A7%C3%A3o-Caldeiras/dp/8583935432" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> NR 13 - Treinamento de Segurança na Operação de Caldeiras </a></p>
 <img src ="img/NR 13 - Treinamento de Segurança na Operação de Caldeiras.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
+
 
 </div>
 </div>
