--- a/automacao.html
+++ b/automacao.html
@@ -72,6 +72,7 @@
 <div class="element1">
 <p><a href="https://www.martinsfontespaulista.com.br/confiabilidade-metrologica-906782/p?idsku=906782&utm_source=google&utm_medium=cpc&utm_campaign=&utm_content=&gclid=Cj0KCQjwrfymBhCTARIsADXTabnZS_9UNeUzzYzcuSowpqGsoW3jHajrS80U03q-1xf49-sTZEDcA7caAnyaEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Confiabilidade metrológica </a></p>
 <img src="img/auto.jps.jpg" alt="">
+<a class="btn btn-primary" href="#" role="button">Comprar</a>
 
 </div>
 <div class="element1">
