--- a/acervo.html
+++ b/acervo.html
@@ -46,8 +46,8 @@
 </nav>
       <style>
         .container {
-          margin-top: 10px;
-          width: 80%;
+          margin-top: 20px;
+          width: 70%;
           padding: 20px;
           background-color: #4c090900;
           border: 1px solid #1f0404;
@@ -66,7 +66,7 @@
         <h1>Termos de Uso da Biblioteca</h1>
         <p>Ao utilizar o acervo da biblioteca, você concorda com os seguintes termos:</p>
         <ol>
-          <li>Os materiais do acervo são de uso exclusivo para fins educacionais e de pesquisa.</li>
+          <li>Os materiais da biblioteca são de uso exclusivo para fins educacionais e de pesquisa.</li>
           <li>Não é permitida a reprodução ou distribuição dos materiais sem autorização prévia.</li>
           <li>Ao utilizar os materiais, você concorda em respeitar os direitos autorais e citar as fontes adequadamente.</li>
           <li>A biblioteca não se responsabiliza por informações imprecisas ou desatualizadas nos materiais do acervo.</li>
@@ -82,19 +82,6 @@
         
         </p>
       </div>
-      <div class="container text-center">
-        <div class="row align-items-center">
-          <div class="col">
-            Horario de Funcionamento:
-          </div>
-          <div class="col">
-            Segunda a Sábado
-          </div>
-          <div class="col">
-           Segunda das 08h as 18h e
-           <div class="col">
-            Sábado 09h as 14h
-          </div>
-        </div>
+      
 </body>
 </html>
